# Bakeru

./: .gitignore  README.md
.github/workflows/: linux.yml  macos.yml  release.yml  windows.yml
bakeru/: index.html  package-lock.json  package.json
bakeru/src/: App.css  App.tsx  utils.ts
bakeru/src-tauri/: Cargo.toml  tauri.conf.json
bakeru/src-tauri/icons/: icon.icns
bakeru/src-tauri/src/: lib.rs  main.rs  solver.rs
inputs/: sample_level_1.html
